objects/BLN_Event__c.object
<CustomObject>
    <fields>
        <fullName>Accept_Refund_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Refund Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accept_Tax_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Tax Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accept_Terms_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowNoticketSessions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllowNoticketSessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowedDevicescount__c</fullName>
        <description>This field will tell us how many devices we allow  per scan attendee ticket.</description>
        <label>AllowedDevicescount</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AllowedLRDevicescount__c</fullName>
        <description>This field will tell us how many devices we allow per Lead retrival ticket.</description>
        <label>AllowedLRDevicescount</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLN_Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_State__c</fullName>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Event_Duration__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Default Event Duration</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Blog_URL__c</fullName>
        <label>Event Blog URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event_Privacy__c</fullName>
        <label>Event Privacy</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <description>event statusDraft/Unpublished/Planned/CreatedLive/Published/BookingOpen/CheckIn  -- No one can check-in unless event admin puts the event status in CheckIn modePause -- like unpublish Finished/Completed -- Cancelled/Deleted</description>
        <label>Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Ticket_Options__c</fullName>
        <label>Event Ticket Options</label>
        <picklist>
            <picklistValues>
                <fullName>Collect info from All Attendees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collect info from Buyers only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Do not collect Attendee info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Topic__c</fullName>
        <label>Event Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Auto, Boat &amp; Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business &amp; Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity &amp; Causes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community &amp; Culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family &amp; Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Film, Media &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government &amp; Politics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Wellness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hobbies &amp; Special Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Lifestyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performing &amp; Visual Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religion &amp; Spirituality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science &amp; Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal &amp; Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports &amp; Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel &amp; Outdoor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appearance or Signing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baby Shower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camp, Trip, or Retreat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class, Training, or Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concert or Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner or Gala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Festival or Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Game or Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting or Networking Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Party or Social Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porfessional Talk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Race or Endurance Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar or Talk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tournament</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow, Consumer Show, or Expo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facebook_URL__c</fullName>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Invoice_Trigger_Duration__c</fullName>
        <defaultValue>1440</defaultValue>
        <description>This is the number of minutes after which the invoice will generate.Default is 24 hours(i.e:1440 min)</description>
        <label>Invoice Trigger Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_Settings__c</fullName>
        <label>Language Settings</label>
        <picklist>
            <picklistValues>
                <fullName>English (United States)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>English (United Kingdom)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Logo_URL__c</fullName>
        <label>Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Max_Naics_Code__c</fullName>
        <label>Max Naics Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Num_Tickets__c</fullName>
        <defaultValue>10000</defaultValue>
        <label>Max_Num_Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organizer_Email__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>Organizer Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PO_Box__c</fullName>
        <label>PO Box</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password invited guests</description>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Refund_Policy__c</fullName>
        <label>Refund Policy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Template__c</fullName>
        <label>Registration Template</label>
        <referenceTo>Registration_Template__c</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Fee__c</fullName>
        <label>Service Fee</label>
        <picklist>
            <picklistValues>
                <fullName>Add Eventdex fee on top of the total ticket price</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Include the Eventdex fee in to the total ticket price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Show_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Terms_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Terms Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Hashtag__c</fullName>
        <label>Social Hashtag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street1__c</fullName>
        <label>Street1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <label>Street2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions__c</fullName>
        <label>Terms &amp; Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>America/New_York</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Kolkata</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Twitter_Hash_Tag__c</fullName>
        <label>Twitter Hash Tag</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Twitter_URL__c</fullName>
        <label>Twitter ID</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Company__c</fullName>
        <description>need to delete</description>
        <label>User Company</label>
        <referenceTo>UC_Role__c</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Venue_Name__c</fullName>
        <description>venue location is nothing but hosting location</description>
        <label>Venue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waitlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_Url__c</fullName>
        <label>Website Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Corporate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Corporate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>last_refreshed_time__c</fullName>
        <label>last refreshed time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organizer_id__c</fullName>
        <label>organizer_id</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>scan_attendee_limit__c</fullName>
        <defaultValue>500</defaultValue>
        <description>for load more, this describes how many records are sent from server to scanattendee app</description>
        <label>scan_attendee_limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BLN Events</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>End_Date__c</columns>
        <columns>Event_Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Non_Live_Events</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Topic__c</columns>
        <columns>Event_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Logo_URL__c</columns>
        <columns>Organizer_Email__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Status__c</field>
            <operation>notEqual</operation>
            <value>Live</value>
        </filters>
        <label>Non Live Events</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Topic__c</columns>
        <columns>Event_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <listViews>
        <fullName>Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Topic__c</columns>
        <columns>Event_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterday</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>